--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <title>The Weather</title>
 </head>
 <body>
-    
+    <h1>This is the font!</h1>
 </body>
 <script src="main.js"></script>
 </html>
