--- a/src/template.html
+++ b/src/template.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>The Weather</title>
-</head>
-<body>
-    <h1>This is the font!</h1>
-</body>
-<script src="main.js"></script>
+  </head>
+  <body>
+    <label for="location">Location</label>
+    <input type="text" id="location" required>
+    <button id="submit">Submit</button>
+  </body>
+  <script src="main.js"></script>
 </html>
