Setup layout and add styling

--- a/src/template.html
+++ b/src/template.html
@@ -1,15 +1,130 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>The Weather</title>
-  </head>
-  <body>
-    <label for="location">Location</label>
-    <input type="text" id="location" required>
-    <button id="submit">Submit</button>
-  </body>
-  <script src="main.js"></script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>The Weather</title>
+</head>
+
+<body>
+  <header class="main-header">
+    <h1>Header Logo</h1>
+    <form id="info-form">
+      <div class="form-content-container">
+        <label for="location">
+          Enter a location:
+        </label>
+        <input type="text" id="location" placeholder="Location" required>
+        <input id="submit" type="submit" value="Submit">
+      </div>
+    </form>
+  </header>
+  <div class="main-content-container">
+    <div class="weather-today">
+      Content
+    </div>
+    <table class="forecast-table">
+      <caption>Forecast for 9/3/2024 to 9/10/2024</caption>
+      <thead>
+        <tr>
+          <th scope="col">Date</th>
+          <th scope="col">High</th>
+          <th scope="col">Low</th>
+          <th scope="col">Conditions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+        <tr>
+          <th scope="row">Date</th>
+          <td>Temp</td>
+          <td>Temp</td>
+          <td>Conditions</td>
+        </tr>
+      </tbody>
+        
+    </table>
+  </div>
+</body>
+<script src="main.js"></script>
+
 </html>
