Add funcitonality to get random location on load

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="main-header">
-    <h1>Header Logo</h1>
+    <h1>Quick Weather</h1>
     <form id="info-form">
       <div class="form-content-container">
         <label for="location">
