Add functions to display forecast, add comments

--- a/src/template.html
+++ b/src/template.html
@@ -23,9 +23,9 @@
   </header>
   <div class="main-content-container">
     <div class="weather-today">
-      Content
+      
     </div>
-    <table class="forecast-table">
+    <table class="forecast-table hidden">
       <caption>Forecast for 9/3/2024 to 9/10/2024</caption>
       <thead>
         <tr>
