Add img to current day weather forecast

--- a/src/template.html
+++ b/src/template.html
@@ -25,13 +25,14 @@
     <div class="weather-today">
       
     </div>
+    <div class="hidden" id="location-error"><h1>Location Not Found</h1></div>
     <table class="forecast-table hidden">
       <caption>Forecast for 9/3/2024 to 9/10/2024</caption>
       <thead>
         <tr>
           <th scope="col">Date</th>
-          <th scope="col">High</th>
           <th scope="col">Low</th>
+          <th scope="col">High</th>
           <th scope="col">Conditions</th>
         </tr>
       </thead>
