--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="84bb4fc080631c2605f1.css" />
   <title>The Weather</title>
-</head>
+<script defer src="main.js"></script></head>
 
 <body>
   <header class="main-header">
@@ -121,4 +121,4 @@
   </div>
 </body>
 </html>
-<script src="main.js"></script>
+<script src="08baa085adb706621d5b.js"></script>
